# gdpr-anonymizer

./: .dockerignore  .env.example  .gitignore  DEBUGGING-SETUP.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  ITERATION1_COMPLETE.md  LICENSE  LLM-INFO-FEATURE.md  Makefile  README-DEPLOYMENT.md  README.md  anonymizer-arch.drawio  demo.py  docker-compose.yml  gdpr_anonymization_agents.md  pyproject.toml  requirements.txt  run_api.py
.claude/: PYLANCE_FIXES_APPLIED.md  code-quality-guidelines.md
.claude/agents/: architect-agent.md  python-backend-engineer.md
client/: README.md  package-lock.json  package.json  vite.config.ts
client/src/: app.tsx  style.css
config/: config.yaml  config.yaml.example
docker/: .dockerignore  Dockerfile
examples/: sample_texts.py
executions/: Architect-Handoff-Guide.md  Post-Development-Documentation-Process.md  iteration-package-definition.md
helm/: DEPLOYMENT.md
k8s/: ingress.yaml
requirements/: Architectural-Requirements-v2.md  Architectural-Requirements.md  Functional-Requirements.md  Software-Design-Requirements.md  preact-architecture-guide.md  requirment-numbering-system.md
scripts/: build.sh  cleanup.sh  deploy.sh  test-local.sh
server/: .env.example  README.md  demo.py  logging.yaml  pyproject.toml  requirements.txt  run_api.py  test_iteration4.py  test_llm_info.sh
server/config/: config.yaml
server/src/anonymization/: risk.py  simple.py
server/src/anonymization/application/: __init__.py  orchestrator.py
server/src/anonymization/domain/: exceptions.py
server/src/anonymization/domain/agents/: __init__.py
server/src/anonymization/domain/agents/prompts/: agent1_prompts.py  agent2_prompts.py  agent3_prompts.py
server/src/anonymization/domain/models/: anonymization_mapping.py  entity.py  validation_result.py
server/src/anonymization/domain/ports/: __init__.py
server/src/anonymization/infrastructure/: config_loader.py
server/src/anonymization/infrastructure/adapters/llm/: base.py  factory.py  ollama_adapter.py
server/src/anonymization/infrastructure/agents/: agent1_anon_exec.py  agent2_direct_check.py
server/src/anonymization/interfaces/: __init__.py
server/src/anonymization/interfaces/rest/: dependencies.py  main.py
server/src/anonymization/interfaces/rest/routers/: anonymization.py  health.py
server/src/anonymization/interfaces/rest/schemas/: __init__.py  requests.py  responses.py
server/test/: test_validation.py
(+78 files in other folders)
